<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
    android:id="@+id/textViewTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="90dp"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/LocalBank"
    android:textColor="@color/white"
    android:textSize="60dp"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/textViewDBS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/DBS"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewUOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_marginTop="330dp"
        android:text="@string/UOB"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewOCBC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_marginTop="460dp"
        android:text="@string/OCBC"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />
    <ToggleButton
        android:id="@+id/TogglebuttonDBSfav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:textOn ="@string/fav"
        android:textOff="@string/notfav"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/fav" />
    <ToggleButton
        android:id="@+id/TogglebuttonUOBfav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:textOn ="@string/fav"
        android:textOff="@string/notfav"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/fav" />
    <ToggleButton
        android:id="@+id/TogglebuttonOCBC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn ="@string/fav"
        android:textOff="@string/notfav"
        android:layout_marginTop="540dp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/fav" />



</androidx.constraintlayout.widget.ConstraintLayout>